--- a/src/app/tab4/tab4.page.scss
+++ b/src/app/tab4/tab4.page.scss
@@ -143,3 +143,43 @@ ion-col {
     transform: translateX(50px);
   }
 }
+
+@media (min-width: 768px) {
+  .circle-background {
+    width: 850px;
+    height: 850px;
+    right: -150px;
+  }
+
+  .centered-photo {
+    margin-top: 5rem;
+    margin-bottom: 5rem;
+  }
+
+  .fotoGrande {
+    width: 50%;
+  }
+
+  .centered-text h1 {
+    font-size: 36px;
+  }
+
+  ion-col {
+    width: calc(100% / 4);
+  }
+
+  .square-image {
+    width: 250px;
+    height: 250px;
+  }
+
+  @media (min-width: 992px) {
+    ion-col:first-child {
+      width: 50%;
+    }
+
+    ion-col:not(:first-child) {
+      width: 50%;
+    }
+  }
+}
