cambios en vista ordenador

--- a/src/app/avis-form/avis-form.page.html
+++ b/src/app/avis-form/avis-form.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="/tabs/tab5"></ion-back-button>
+      <ion-back-button defaultHref="/tabs/tab5" text="Tornar"></ion-back-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
