--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -3,7 +3,7 @@
 
   <ion-grid>
     <ion-row>
-      <ion-col size="12" size-lg="6">
+      <ion-col size="12" size-xl="6">
         <div class="circle-background"></div>
         <div class="centered-image">
           <img src="../../assets/images/fallallibret1.png" alt="Descripción de la imagen">
@@ -13,7 +13,7 @@
         </div>
       </ion-col>
 
-      <ion-col size="12" size-lg="6">
+      <ion-col size="12" size-xl="6">
         <h1>Els nostres representants.</h1>
         <ion-card class="main-card" *ngFor="let card of cards">
           <ion-card-content>
