--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -9,10 +9,10 @@
 
       <!-- Mostrar la primera foto por separado -->
       <ion-row *ngIf="photos && photos.length > 0">
-        <ion-col size="12" size-lg="6" class="centered-photo">
+        <ion-col size="12" size-xl="6" class="centered-photo">
           <ion-img [src]="photos[0]" class="fotoGrande"></ion-img>
         </ion-col>
-        <ion-col size="12" size-lg="6">
+        <ion-col size="12" size-xl="6">
           <ion-row>
             <ion-col size="12">
               <div class="centered-text">
