--- a/src/app/tab5/tab5.page.html
+++ b/src/app/tab5/tab5.page.html
@@ -21,13 +21,13 @@
       <ion-col size="12">
         <h2 class="h2Admin">ADMIN PANEL</h2>
       </ion-col>
-      <ion-col size="12" size-lg="6">
+      <ion-col size="12" size-xl="6">
         <ion-card class="interiorCard" id="open-modal">
           <ion-icon class="interiorIcon" name="calendar"></ion-icon>
           <span>Events</span>
         </ion-card>
       </ion-col>
-      <ion-col size="12" size-lg="6">
+      <ion-col size="12" size-xl="6">
         <ion-card class="interiorCard" id="open-modal2">
           <ion-icon class="interiorIcon" name="notifications"></ion-icon>
           <span>Avisós</span>
