--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -95,6 +95,14 @@ h2 {
   margin-top: 1vh;
 }
 
+h4 {
+  text-align: justify;
+}
+
+ion-card-title{
+  text-align: center;
+}
+
 .calendar-container {
   display: flex;
   justify-content: center;
