--- a/src/app/info-page/info-page.page.html
+++ b/src/app/info-page/info-page.page.html
@@ -9,6 +9,9 @@
 
 
 <ion-content>
+
+  <app-swiper [imagenes]="imagen "></app-swiper>
+
   <ion-card>
     <ion-card-content>
       <p>{{ text }}</p>
