actualizado a @for y @if

--- a/src/app/avis-form/avis-form.page.html
+++ b/src/app/avis-form/avis-form.page.html
@@ -8,7 +8,7 @@
 
 <ion-content>
   <ion-item>
-    <ion-label position="stacked">Nombre del Evento</ion-label>
+    <ion-label position="stacked">NOM DE L'AVÍS</ion-label>
     <ion-input type="text" [(ngModel)]="titulo"></ion-input>
   </ion-item>
 
