--- a/src/app/event-form/event-form.page.html
+++ b/src/app/event-form/event-form.page.html
@@ -8,17 +8,17 @@
 
 <ion-content>
   <ion-item>
-    <ion-label position="stacked">Nombre del Evento</ion-label>
+    <ion-label position="stacked">NOM DEL EVENT</ion-label>
     <ion-input type="text" [(ngModel)]="nombreEvento"></ion-input>
   </ion-item>
 
   <ion-item>
-    <ion-label position="stacked">Descripción</ion-label>
+    <ion-label position="stacked">DESCRIPCIÓ</ion-label>
     <ion-input type="text" [(ngModel)]="descripcion"></ion-input>
   </ion-item>
 
   <ion-item>
-    <ion-label position="stacked">Fecha</ion-label>
+    <ion-label position="stacked">DATA</ion-label>
     <div class="calendar-container">
       <ion-datetime displayFormat="DD/MM/YYYY" presentation="date" class="custom-datetime" [(ngModel)]="fechaEvento"></ion-datetime>
     </div>
