cambios de idioma

--- a/src/app/tab5/tab5.page.html
+++ b/src/app/tab5/tab5.page.html
@@ -6,7 +6,7 @@
 
   <ion-card class="firstCard">
     @if (correoUsuario) {
-    <p>{{ correoUsuario }}</p>
+    <p class="nombreUsuario">{{ correoUsuario }}</p>
     }
 
     <div class="imagen-redonda">
