--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -82,7 +82,8 @@ ion-list {
 }
 
 h1,
-h2 {
+h2,
+h3 {
   font-size: 24px;
   font-weight: bold;
   color: black;
@@ -94,6 +95,8 @@ h2 {
   margin-bottom: 3vh;
   margin-top: 1vh;
 }
+
+
 
 h4 {
   text-align: justify;
